# todo

./: docker-compose.yaml  main.py  pyproject.toml
src/: settings.py
src/cli/: commands.py  interface.py
src/database/: session.py  setup.py
src/models/: base.py  task.py
src/repositories/: base.py  task_repository.py
src/services/: task_service.py  utils.py
src/tasks/: __init__.py  celery.py  tasks.py
