[project]
name = "todo"
version = "0.1.0"
description = ""
authors = [
    {name = "ialloni",email = "sdls2000@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "kombu (>=5.5.4,<6.0.0)",
    "celery-stubs (>=0.1.3,<0.2.0)",
    "win10toast (>=0.9,<0.10)",
    "eventlet (>=0.40.1,<0.41.0)"
]

[tool.poetry]
packages = [{include = "todo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
